--- a/FireWatch.vcxproj.filters
+++ b/FireWatch.vcxproj.filters
@@ -54,6 +54,9 @@
     <Filter Include="ゲーム\ユーティリティ\数学関係">
       <UniqueIdentifier>{56470279-096b-4e27-8d96-c9436e6c0b28}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ゲーム\オブジェクト関係">
+      <UniqueIdentifier>{114b0212-17ca-4698-9010-0ff10251263c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <!-- ソースファイル -->
   <ItemGroup>
@@ -133,13 +136,19 @@
     <ClCompile Include="Game\Collision.cpp">
       <Filter>ゲーム</Filter>
     </ClCompile>
+    <ClCompile Include="Game\RenderManager.cpp">
+      <Filter>ゲーム\ユーティリティ</Filter>
+    </ClCompile>
     <ClCompile Include="Game\Map.cpp">
-      <Filter>ゲーム</Filter>
+      <Filter>ゲーム\オブジェクト関係</Filter>
     </ClCompile>
     <ClCompile Include="Game\MapChip.cpp">
-      <Filter>ゲーム</Filter>
+      <Filter>ゲーム\オブジェクト関係</Filter>
     </ClCompile>
-    <ClCompile Include="Game\RenderManager.cpp">
+    <ClCompile Include="Game\Player.cpp">
+      <Filter>ゲーム\オブジェクト関係</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Character.cpp">
       <Filter>ゲーム</Filter>
     </ClCompile>
   </ItemGroup>
@@ -235,12 +244,6 @@
     <ClInclude Include="Game\Collision.h">
       <Filter>ゲーム</Filter>
     </ClInclude>
-    <ClInclude Include="Game\Map.h">
-      <Filter>ゲーム</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\MapChip.h">
-      <Filter>ゲーム</Filter>
-    </ClInclude>
     <ClInclude Include="Game\ErrorMessage.h">
       <Filter>ゲーム\ユーティリティ</Filter>
     </ClInclude>
@@ -249,6 +252,24 @@
     </ClInclude>
     <ClInclude Include="Game\ScreenInfo.h">
       <Filter>ゲーム</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Map.h">
+      <Filter>ゲーム\オブジェクト関係</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\MapChip.h">
+      <Filter>ゲーム\オブジェクト関係</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\MessageInterface.h">
+      <Filter>ゲーム\ユーティリティ</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\MessageManager.h">
+      <Filter>ゲーム\ユーティリティ</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Player.h">
+      <Filter>ゲーム\オブジェクト関係</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Character.h">
+      <Filter>ゲーム\オブジェクト関係</Filter>
     </ClInclude>
   </ItemGroup>
   <!-- リソースファイル -->
