--- a/FireWatch.vcxproj
+++ b/FireWatch.vcxproj
@@ -89,6 +89,7 @@
   <!-- ソースファイル -->
   <ItemGroup>
     <ClCompile Include="Game\AbstractScene.cpp" />
+    <ClCompile Include="Game\Bonfire.cpp" />
     <ClCompile Include="Game\Character.cpp" />
     <ClCompile Include="Game\Collider.cpp" />
     <ClCompile Include="Game\Collision.cpp" />
@@ -126,6 +127,7 @@
   <!-- ヘッダファイル -->
   <ItemGroup>
     <ClInclude Include="Game\AbstractScene.h" />
+    <ClInclude Include="Game\Bonfire.h" />
     <ClInclude Include="Game\Character.h" />
     <ClInclude Include="Game\Collider.h" />
     <ClInclude Include="Game\Collision.h" />
