--- a/FireWatch.vcxproj
+++ b/FireWatch.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="Game\LogoScene.cpp" />
     <ClCompile Include="Game\Map.cpp" />
     <ClCompile Include="Game\MapChip.cpp" />
+    <ClCompile Include="Game\Mouse.cpp" />
     <ClCompile Include="Game\MyMath.cpp" />
     <ClCompile Include="Game\Pad.cpp" />
     <ClCompile Include="Game\Player.cpp" />
@@ -136,6 +137,8 @@
     <ClInclude Include="Game\ErrorMessage.h" />
     <ClInclude Include="Game\FieldObject.h" />
     <ClInclude Include="Game\FieldObjectManager.h" />
+    <ClInclude Include="Game\FlushLight.h" />
+    <ClInclude Include="Game\Mouse.h" />
     <ClInclude Include="Game\ShaderManager.h" />
     <ClInclude Include="Game\Tent.h" />
     <ClInclude Include="Game\Keyboard.h" />
