インデントの整理

--- a/FireWatch.vcxproj
+++ b/FireWatch.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="Game\Collider.cpp" />
     <ClCompile Include="Game\Collision.cpp" />
     <ClCompile Include="Game\Color.cpp" />
+    <ClCompile Include="Game\Crossbow.cpp" />
     <ClCompile Include="Game\FieldObject.cpp" />
     <ClCompile Include="Game\FieldObjectManager.cpp" />
     <ClCompile Include="Game\FlashLight.cpp" />
@@ -136,6 +137,7 @@
     <ClInclude Include="Game\Collider.h" />
     <ClInclude Include="Game\Collision.h" />
     <ClInclude Include="Game\Color.h" />
+    <ClInclude Include="Game\Crossbow.h" />
     <ClInclude Include="Game\ErrorMessage.h" />
     <ClInclude Include="Game\FieldObject.h" />
     <ClInclude Include="Game\FieldObjectManager.h" />
@@ -166,6 +168,7 @@
     <ClInclude Include="Game\Sound.h" />
     <ClInclude Include="Game\TitleScene.h" />
     <ClInclude Include="Game\Vector2.h" />
+    <ClInclude Include="Game\Weapon.h" />
     <ClInclude Include="Libraries\GameLibrary\GameLibAudio.h" />
     <ClInclude Include="Libraries\GameLibrary\GameLibCollision.h" />
     <ClInclude Include="Libraries\GameLibrary\GameLibGraphics.h" />
