--- a/FireWatch.vcxproj.filters
+++ b/FireWatch.vcxproj.filters
@@ -69,6 +69,9 @@
     <Filter Include="ゲーム\オブジェクト関係\アイテム関係">
       <UniqueIdentifier>{e8c0afbb-213f-48bc-abee-b13c677e15a9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ゲーム\オブジェクト関係\攻撃関係">
+      <UniqueIdentifier>{0a7e77b9-12d7-46fc-84fe-ce60f1c6dcf4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <!-- ソースファイル -->
   <ItemGroup>
@@ -188,7 +191,13 @@
       <Filter>ゲーム\オブジェクト関係\アイテム関係</Filter>
     </ClCompile>
     <ClCompile Include="Game\Crossbow.cpp">
-      <Filter>ゲーム</Filter>
+      <Filter>ゲーム\オブジェクト関係\アイテム関係</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Arrow.cpp">
+      <Filter>ゲーム\オブジェクト関係\攻撃関係</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\ArrowManager.cpp">
+      <Filter>ゲーム\オブジェクト関係\攻撃関係</Filter>
     </ClCompile>
   </ItemGroup>
   <!-- ヘッダファイル -->
@@ -339,6 +348,12 @@
     </ClInclude>
     <ClInclude Include="Game\Crossbow.h">
       <Filter>ゲーム\オブジェクト関係\アイテム関係</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Arrow.h">
+      <Filter>ゲーム\オブジェクト関係\攻撃関係</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\ArrowManager.h">
+      <Filter>ゲーム\オブジェクト関係\攻撃関係</Filter>
     </ClInclude>
   </ItemGroup>
   <!-- リソースファイル -->
